deployment-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: auth
    name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 3
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: jamesvincentsiauw/sejutacita-auth:final
        ports:
        - containerPort: 3000
