kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sejutacita-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - http:
        paths:
          - path: /login
            backend:
              serviceName: auth
              servicePort: 3000
          - path: /register
            backend:
              serviceName: auth
              servicePort: 3000
          - path: /user
            backend:
              serviceName: crud
              servicePort: 4000
